name:                ebnf-to-railroad
version:             0.1.0.0
homepage:            https://github.com/jean-lopes/ebnf-parser#readme
license:             MIT
license-file:        LICENSE
author:              Jean Carlo Giambastiani Lopes
maintainer:          example@example.com
copyright:           Copyright (c) 2017 Jean Carlo Giambastiani Lopes
category:            parser
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/jean-lopes/ebnf-to-railroad

library
  hs-source-dirs:      src
  exposed-modules:     Core
                     , Core.EBNF        
  build-depends:       base >= 4.7 && < 5
                     , text 
                     , containers
                     , megaparsec
  default-language:    Haskell2010
  ghc-options:         -Wall

executable ebnf-to-railroad
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Html
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ebnf-to-railroad
                     , text
                     , optparse-applicative
                     , easy-file
                     , blaze-html
                     , twitch
                     , process
                     , data-default
  default-language:    Haskell2010
  ghc-options:         -Wall